--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.23.4",
     "cos-js-sdk-v5": "^1.3.9",
     "dayjs": "^1.11.4",
+    "echarts": "^5.3.3",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
@@ -27,6 +28,7 @@
     "qrcode": "^1.5.1",
     "script-loader": "^0.7.2",
     "vue": "2.6.10",
+    "vue-i18n": "v8",
     "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
